--- a/proj.ipynb
+++ b/proj.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,8 +79,16 @@
     "class Tile(Enum):\n",
     "    EMPTY = 0\n",
     "    BUILDING = 1\n",
-    "    PASSENGER = 2\n",
+    "    PICK_UP = 2\n",
     "    DROP_OFF = 3\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        if  other.__class__ is self.__class__:\n",
+    "            return self.value == other.value\n",
+    "        elif self.value == other:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
     "\n",
     "\n",
     "# Remember to index as [y, x]\n",
@@ -91,12 +99,14 @@
     "    [0, 1, 0, 1, 3,],\n",
     "    [0, 1, 0, 0, 0,],\n",
     "    [2, 1, 1, 0, 0,]\n",
-    "])\n"
+    "])\n",
+    "\n",
+    "mappy = mappy.T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,11 +127,11 @@
     "\n",
     "def do_action(x, y, passenger, action) -> tuple[int, int, bool, Exception | None]:\n",
     "    if action == Action.PICK_UP:\n",
-    "        if passenger:\n",
+    "        if passenger or mappy[y, x] != Tile.PICK_UP:\n",
     "            return x, y, passenger, FaultyPassengerAction\n",
     "        return x, y, True, None\n",
     "    elif action == Action.DROP_OFF:\n",
-    "        if not passenger:\n",
+    "        if not passenger or mappy[y, x] != Tile.DROP_OFF:\n",
     "            return x, y, passenger, FaultyPassengerAction\n",
     "        return x, y, False, None\n",
     "\n",
@@ -143,12 +153,32 @@
     "        return nx, ny, passenger, None\n",
     "\n",
     "def get_idx(x: int, y: int, passenger: int | bool) -> int:\n",
-    "    return x + y * MAP_SIZE + int(passenger) * MAP_SIZE * MAP_SIZE"
+    "    return x + y * MAP_SIZE + int(passenger) * MAP_SIZE * MAP_SIZE\n",
+    "\n",
+    "def get_state(idx: int) -> tuple[int, int, bool]:\n",
+    "    passenger = idx // (MAP_SIZE * MAP_SIZE)\n",
+    "    rest = idx % (MAP_SIZE * MAP_SIZE)\n",
+    "    y = rest // MAP_SIZE\n",
+    "    x = idx % MAP_SIZE\n",
+    "    return x, y, bool(passenger)\n",
+    "\n",
+    "_tst_state = 2, 3, True\n",
+    "_tst_state_2 = get_state(get_idx(_tst_state[0], _tst_state[1], _tst_state[2]))\n",
+    "assert _tst_state_2 == _tst_state\n",
+    "\n",
+    "def iterstates():\n",
+    "    for x in range(MAP_SIZE):\n",
+    "        for y in range(MAP_SIZE):\n",
+    "            if mappy[y, x] == Tile.BUILDING:\n",
+    "                # Skip all buildings\n",
+    "                continue\n",
+    "            for passenger in [0, 1]:\n",
+    "                yield x, y, passenger"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -160,105 +190,154 @@
       "CPU model: 11th Gen Intel(R) Core(TM) i7-1165G7 @ 2.80GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 50 rows, 2550 columns and 2500 nonzeros\n",
-      "Model fingerprint: 0x5592f337\n",
-      "Model has 2500 quadratic constraints\n",
+      "Optimize a model with 148 rows, 36 columns and 226 nonzeros\n",
+      "Model fingerprint: 0xc1ba4351\n",
       "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 1e+00]\n",
-      "  QMatrix range    [5e-01, 5e-01]\n",
-      "  QLMatrix range   [1e+00, 2e+01]\n",
-      "  Objective range  [5e-01, 5e-01]\n",
-      "  Bounds range     [1e+00, 1e+00]\n",
-      "  RHS range        [1e+00, 1e+00]\n",
-      "Presolve removed 0 rows and 2265 columns\n"
-     ]
-    },
-    {
-     "ename": "GurobiError",
-     "evalue": "Q matrix is not positive semi-definite (PSD). Set NonConvex parameter to 2 to solve model.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mGurobiError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\ivism\\Progging\\belgia\\opt_proj\\proj.ipynb Cell 7\u001b[0m line \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/ivism/Progging/belgia/opt_proj/proj.ipynb#W1sZmlsZQ%3D%3D?line=51'>52</a>\u001b[0m     m\u001b[39m.\u001b[39maddConstr(gp\u001b[39m.\u001b[39mquicksum([choices[i, j] \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(MAP_SIZE \u001b[39m*\u001b[39m MAP_SIZE \u001b[39m*\u001b[39m \u001b[39m2\u001b[39m)]) \u001b[39m==\u001b[39m \u001b[39m1.0\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/ivism/Progging/belgia/opt_proj/proj.ipynb#W1sZmlsZQ%3D%3D?line=52'>53</a>\u001b[0m m\u001b[39m.\u001b[39maddConstr((identity \u001b[39m-\u001b[39m gamma \u001b[39m*\u001b[39m (choices \u001b[39m*\u001b[39m possibilities)) \u001b[39m*\u001b[39m Vs \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m elementary_vector \u001b[39m*\u001b[39m ((choices \u001b[39m*\u001b[39m possibilities) \u001b[39m*\u001b[39m rewards))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/ivism/Progging/belgia/opt_proj/proj.ipynb#W1sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m m\u001b[39m.\u001b[39;49moptimize()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/ivism/Progging/belgia/opt_proj/proj.ipynb#W1sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m \u001b[39mprint\u001b[39m()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/ivism/Progging/belgia/opt_proj/proj.ipynb#W1sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(MAP_SIZE):\n",
-      "File \u001b[1;32msrc\\gurobipy\\model.pxi:878\u001b[0m, in \u001b[0;36mgurobipy.Model.optimize\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mGurobiError\u001b[0m: Q matrix is not positive semi-definite (PSD). Set NonConvex parameter to 2 to solve model."
+      "  Matrix range     [1e-02, 1e+00]\n",
+      "  Objective range  [1e-02, 1e-02]\n",
+      "  Bounds range     [0e+00, 0e+00]\n",
+      "  RHS range        [1e+00, 2e+01]\n",
+      "Presolve removed 70 rows and 0 columns\n",
+      "Presolve time: 0.00s\n",
+      "Presolved: 78 rows, 36 columns, 156 nonzeros\n",
+      "\n",
+      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
+      "       0    5.3405458e-01   4.988081e+01   0.000000e+00      0s\n",
+      "      27    2.7806593e+00   0.000000e+00   0.000000e+00      0s\n",
+      "\n",
+      "Solved in 27 iterations and 0.01 seconds (0.00 work units)\n",
+      "Optimal objective  2.780659288e+00\n",
+      "\n",
+      "No passenger:\n",
+      "02.35   B   00.31 00.00 00.00 \n",
+      "03.38 02.35 01.32   B   00.00 \n",
+      "04.43   B   00.31   B   00.00 \n",
+      "05.48   B   00.00 00.00 00.00 \n",
+      "06.55   B     B   00.00 00.00 \n",
+      "\n",
+      "With passenger:\n",
+      "09.81   B   14.31 15.47 16.63 \n",
+      "10.92 12.04 13.17   B   17.81 \n",
+      "09.81   B   14.31   B   19.00 \n",
+      "08.71   B   15.47 16.63 17.81 \n",
+      "07.62   B     B   15.47 16.63 \n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "m = gp.Model(\"somename\")\n",
+    "m = gp.Model(\"taxi_driver\")\n",
+    "# m.params.LogToConsole = 0\n",
     "\n",
     "# Vs[y, x, passenger] => Value of state\n",
-    "Vs = m.addMVar((MAP_SIZE * MAP_SIZE * 2), lb=0)\n",
+    "Vs = np.empty((MAP_SIZE * MAP_SIZE * 2), dtype=object)\n",
     "# choices[y, x, p, ny, nx, np] => probability of transition\n",
-    "identity = np.identity(MAP_SIZE * MAP_SIZE * 2)\n",
-    "elementary_vector = np.ones((MAP_SIZE * MAP_SIZE * 2))\n",
-    "possibilities = np.zeros((MAP_SIZE * MAP_SIZE * 2, MAP_SIZE * MAP_SIZE * 2))\n",
-    "choices = m.addMVar((MAP_SIZE * MAP_SIZE * 2, MAP_SIZE * MAP_SIZE * 2), lb=0, ub=1)\n",
     "rewards = np.zeros((MAP_SIZE * MAP_SIZE * 2, MAP_SIZE * MAP_SIZE * 2))\n",
-    "gamma = 0.5\n",
+    "gamma = 0.99\n",
+    "\n",
+    "for x, y, passenger in iterstates():\n",
+    "    # Insert a state\n",
+    "    Vs[get_idx(x, y, passenger)] = m.addVar()\n",
+    "for x, y, passenger in iterstates():\n",
+    "    # Create list of all transitions away from this given state\n",
+    "    state_actions = []\n",
+    "    for action in Action:\n",
+    "        reward = -1  # For using a timestep\n",
+    "\n",
+    "        nx, ny, npass, error = do_action(x, y, passenger, action)\n",
+    "        if error == FaultyPassengerAction:\n",
+    "            reward -= 10\n",
+    "        elif action == Action.DROP_OFF:\n",
+    "            # Successfull drop off\n",
+    "            reward += 20\n",
+    "        elif error == FaultyMove:\n",
+    "            continue  # Skip all impossible moves\n",
+    "\n",
+    "        rewards[get_idx(x, y, passenger), get_idx(nx, ny, npass)] = reward\n",
+    "        m.addConstr(Vs[get_idx(x, y, passenger)] >= reward + gamma * Vs[get_idx(nx, ny, npass)])\n",
     "\n",
     "m.setObjective(\n",
-    "    (1 - gamma) * gp.quicksum(Vs),\n",
-    "    # * gp.quicksum(\n",
-    "    #     [\n",
-    "    #         Vs[get_idx(x, y, passenger)]\n",
-    "    #         for x in range(MAP_SIZE)\n",
-    "    #         for y in range(MAP_SIZE)\n",
-    "    #         for passenger in [0, 1]\n",
-    "    #         if mappy[y, x] != Tile.BUILDING\n",
-    "    #     ]\n",
-    "    # ),\n",
+    "    (1 - gamma) * gp.quicksum(Vs[Vs != None]),\n",
     "    sense=GRB.MINIMIZE,\n",
     ")\n",
     "\n",
-    "for x in range(MAP_SIZE):\n",
-    "    for y in range(MAP_SIZE):\n",
-    "        if mappy[y, x] == Tile.BUILDING:\n",
-    "            # Skip all buildings\n",
-    "            continue  # unsure if this is the correct thing to do\n",
-    "        for passenger in [0, 1]:\n",
-    "            all_Qs = []\n",
-    "            for action in Action:\n",
-    "                # Enforcing V(s) >= R(s,a) + V(s')\n",
-    "                reward = -1  # For using a timestep\n",
-    "\n",
-    "                nx, ny, npass, error = do_action(x, y, passenger, action)\n",
-    "                if error == FaultyPassengerAction:\n",
-    "                    reward -= 10\n",
-    "                elif action == Action.DROP_OFF:\n",
-    "                    # Successfull drop off\n",
-    "                    reward += 20\n",
-    "                elif error == FaultyMove:\n",
-    "                    continue  # Skip all buildings\n",
-    "                    # reward = -1_000_000_000\n",
-    "\n",
-    "                possibilities[get_idx(x, y, passenger), get_idx(nx, ny, npass)] = 1.0\n",
-    "                rewards[get_idx(x, y, passenger), get_idx(nx, ny, npass)] = reward\n",
-    "\n",
-    "for i in range(MAP_SIZE * MAP_SIZE * 2):\n",
-    "    m.addConstr(gp.quicksum([choices[i, j] for j in range(MAP_SIZE * MAP_SIZE * 2)]) == 1.0)\n",
-    "m.addConstr((identity - gamma * (choices * possibilities)) * Vs >= elementary_vector * ((choices * possibilities) * rewards))\n",
     "m.optimize()\n",
     "\n",
     "print()\n",
-    "for x in range(MAP_SIZE):\n",
-    "    for y in range(MAP_SIZE):\n",
-    "        if mappy[y, x] == Tile.BUILDING:\n",
-    "            # Skip all buildings\n",
-    "            continue  # unsure if this is the correct thing to do\n",
-    "        print(Vs[get_idx(x, y, True)].X, end=\" \")\n",
+    "for passenger in [0, 1]:\n",
+    "    print(\"With passenger:\") if passenger else print(\"No passenger:\")\n",
+    "    for x in range(MAP_SIZE):\n",
+    "        for y in range(MAP_SIZE):\n",
+    "            if mappy[y, x] == Tile.BUILDING:\n",
+    "                print(f\"  B  \", end=\" \")\n",
+    "            else:\n",
+    "                print(f\"{Vs[get_idx(x, y, passenger)].X:05.2f}\", end=\" \")\n",
+    "        print()\n",
     "    print()\n",
-    "        # for passenger in [0, 1]:\n"
+    "\n",
+    "# x, y, png = 0, 3, False\n",
+    "\n",
+    "# visited = set((x, y, png))\n",
+    "# while True:\n",
+    "#     todo = None\n",
+    "#     for i in range(len(choices[get_idx(x, y, png),:])):\n",
+    "#         ch = choices[get_idx(x, y, png), i]\n",
+    "#         if type(ch) == gp.Var:\n",
+    "#             if ch.X != 0 and ch.X != 1:\n",
+    "#                 print(f\"at {x, y, png, i} we have undetermined choice\")\n",
+    "#             if ch.X == 1:\n",
+    "#                 todo = i\n",
+    "#                 break\n",
+    "#     x, y, png = get_state(todo)\n",
+    "#     print(x, y, png)\n",
+    "#     if (x, y, png) in visited:\n",
+    "#         break\n",
+    "#     visited.add((x, y, png))\n",
+    "\n",
+    "if False:\n",
+    "    for i in range(choices.shape[1]):\n",
+    "        for j in range(choices.shape[0]):\n",
+    "            ch = choices[j, i]\n",
+    "            if type(ch) == gp.Var:\n",
+    "                print(ch.X, end=\" \")\n",
+    "            else:\n",
+    "                print(0.0, end=\" \")\n",
+    "        print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "Assumptions:\n",
+    "  - Every draw is independent of the previous draws,\n",
+    "    meaning the probability of drawing 5 (or 10 000) of the same card is nonzero.\n",
+    "  - The player has a fixed policy of always drawing until his score is 12 or higher,\n",
+    "    because below that it is impossible to bust.\n",
+    "\n",
+    "\"\"\"\n",
+    "class BJAction(Enum):\n",
+    "    Hit = 0\n",
+    "    Stand = 1\n",
+    "\n",
+    "def draw_card():\n",
+    "    rn = np.random.choice([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13])\n",
+    "    if rn in [11, 12, 13]: # Face cards\n",
+    "        rn = 10\n",
+    "    return rn\n",
+    "\n",
+    "POSSIBLE_SUMS = 10 # [12, ..., 21]\n",
+    "POSSIBLE_DEALER_FACES = 10 # [1, ..., 10]\n",
+    "\n",
+    "m2 = gp.Model(\"blackjack_bajillionaire\")\n",
+    "\n",
+    "Vs = np.empty((POSSIBLE_SUMS * POSSIBLE_DEALER_FACES), dtype=object)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
