implement testing of blackjack

--- a/proj.ipynb
+++ b/proj.ipynb
@@ -164,14 +164,14 @@
       "  Bounds range     [0e+00, 0e+00]\n",
       "  RHS range        [1e+00, 2e+01]\n",
       "Presolve removed 70 rows and 0 columns\n",
-      "Presolve time: 0.01s\n",
+      "Presolve time: 0.02s\n",
       "Presolved: 78 rows, 36 columns, 156 nonzeros\n",
       "\n",
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
       "       0    5.3405458e-01   4.988081e+01   0.000000e+00      0s\n",
       "      27    2.7806593e+00   0.000000e+00   0.000000e+00      0s\n",
       "\n",
-      "Solved in 27 iterations and 0.01 seconds (0.00 work units)\n",
+      "Solved in 27 iterations and 0.05 seconds (0.00 work units)\n",
       "Optimal objective  2.780659288e+00\n"
      ]
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -518,42 +518,42 @@
        "</style>\n",
        "\n",
        "<div class=\"animation\">\n",
-       "  <img id=\"_anim_img03cabbc29a774da9881227117b36e22a\">\n",
+       "  <img id=\"_anim_imgb45f2b14d098492bae78778942a7fcb0\">\n",
        "  <div class=\"anim-controls\">\n",
-       "    <input id=\"_anim_slider03cabbc29a774da9881227117b36e22a\" type=\"range\" class=\"anim-slider\"\n",
+       "    <input id=\"_anim_sliderb45f2b14d098492bae78778942a7fcb0\" type=\"range\" class=\"anim-slider\"\n",
        "           name=\"points\" min=\"0\" max=\"1\" step=\"1\" value=\"0\"\n",
-       "           oninput=\"anim03cabbc29a774da9881227117b36e22a.set_frame(parseInt(this.value));\">\n",
+       "           oninput=\"animb45f2b14d098492bae78778942a7fcb0.set_frame(parseInt(this.value));\">\n",
        "    <div class=\"anim-buttons\">\n",
-       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"anim03cabbc29a774da9881227117b36e22a.slower()\">\n",
+       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"animb45f2b14d098492bae78778942a7fcb0.slower()\">\n",
        "          <i class=\"fa fa-minus\"></i></button>\n",
-       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"anim03cabbc29a774da9881227117b36e22a.first_frame()\">\n",
+       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"animb45f2b14d098492bae78778942a7fcb0.first_frame()\">\n",
        "        <i class=\"fa fa-fast-backward\"></i></button>\n",
-       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"anim03cabbc29a774da9881227117b36e22a.previous_frame()\">\n",
+       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"animb45f2b14d098492bae78778942a7fcb0.previous_frame()\">\n",
        "          <i class=\"fa fa-step-backward\"></i></button>\n",
-       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"anim03cabbc29a774da9881227117b36e22a.reverse_animation()\">\n",
+       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"animb45f2b14d098492bae78778942a7fcb0.reverse_animation()\">\n",
        "          <i class=\"fa fa-play fa-flip-horizontal\"></i></button>\n",
-       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"anim03cabbc29a774da9881227117b36e22a.pause_animation()\">\n",
+       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"animb45f2b14d098492bae78778942a7fcb0.pause_animation()\">\n",
        "          <i class=\"fa fa-pause\"></i></button>\n",
-       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"anim03cabbc29a774da9881227117b36e22a.play_animation()\">\n",
+       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"animb45f2b14d098492bae78778942a7fcb0.play_animation()\">\n",
        "          <i class=\"fa fa-play\"></i></button>\n",
-       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"anim03cabbc29a774da9881227117b36e22a.next_frame()\">\n",
+       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"animb45f2b14d098492bae78778942a7fcb0.next_frame()\">\n",
        "          <i class=\"fa fa-step-forward\"></i></button>\n",
-       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"anim03cabbc29a774da9881227117b36e22a.last_frame()\">\n",
+       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"animb45f2b14d098492bae78778942a7fcb0.last_frame()\">\n",
        "          <i class=\"fa fa-fast-forward\"></i></button>\n",
-       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"anim03cabbc29a774da9881227117b36e22a.faster()\">\n",
+       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"animb45f2b14d098492bae78778942a7fcb0.faster()\">\n",
        "          <i class=\"fa fa-plus\"></i></button>\n",
        "    </div>\n",
-       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_select03cabbc29a774da9881227117b36e22a\"\n",
+       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_selectb45f2b14d098492bae78778942a7fcb0\"\n",
        "          class=\"anim-state\">\n",
-       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_03cabbc29a774da9881227117b36e22a\"\n",
+       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_b45f2b14d098492bae78778942a7fcb0\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio1_03cabbc29a774da9881227117b36e22a\">Once</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_03cabbc29a774da9881227117b36e22a\"\n",
+       "      <label for=\"_anim_radio1_b45f2b14d098492bae78778942a7fcb0\">Once</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_b45f2b14d098492bae78778942a7fcb0\"\n",
        "             checked>\n",
-       "      <label for=\"_anim_radio2_03cabbc29a774da9881227117b36e22a\">Loop</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_03cabbc29a774da9881227117b36e22a\"\n",
+       "      <label for=\"_anim_radio2_b45f2b14d098492bae78778942a7fcb0\">Loop</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_b45f2b14d098492bae78778942a7fcb0\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio3_03cabbc29a774da9881227117b36e22a\">Reflect</label>\n",
+       "      <label for=\"_anim_radio3_b45f2b14d098492bae78778942a7fcb0\">Reflect</label>\n",
        "    </form>\n",
        "  </div>\n",
        "</div>\n",
@@ -563,9 +563,9 @@
        "  /* Instantiate the Animation class. */\n",
        "  /* The IDs given should match those used in the template above. */\n",
        "  (function() {\n",
-       "    var img_id = \"_anim_img03cabbc29a774da9881227117b36e22a\";\n",
-       "    var slider_id = \"_anim_slider03cabbc29a774da9881227117b36e22a\";\n",
-       "    var loop_select_id = \"_anim_loop_select03cabbc29a774da9881227117b36e22a\";\n",
+       "    var img_id = \"_anim_imgb45f2b14d098492bae78778942a7fcb0\";\n",
+       "    var slider_id = \"_anim_sliderb45f2b14d098492bae78778942a7fcb0\";\n",
+       "    var loop_select_id = \"_anim_loop_selectb45f2b14d098492bae78778942a7fcb0\";\n",
        "    var frames = new Array(17);\n",
        "    \n",
        "  frames[0] = \"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAoAAAAHgCAYAAAA10dzkAAAAOXRFWHRTb2Z0d2FyZQBNYXRwbG90\\\n",
@@ -5244,7 +5244,7 @@
        "    /* set a timeout to make sure all the above elements are created before\n",
        "       the object is initialized. */\n",
        "    setTimeout(function() {\n",
-       "        anim03cabbc29a774da9881227117b36e22a = new Animation(frames, img_id, slider_id, 200.0,\n",
+       "        animb45f2b14d098492bae78778942a7fcb0 = new Animation(frames, img_id, slider_id, 200.0,\n",
        "                                 loop_select_id);\n",
        "    }, 0);\n",
        "  })()\n",
@@ -5254,7 +5254,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5318,7 +5318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -5466,16 +5466,100 @@
     "my_sum = 14\n",
     "dealer_face = 7\n",
     "print(bj_Q[my_sum - 12, dealer_face - 1, BJAction.Stand.value])\n",
-    "print(bj_Q[my_sum - 12, dealer_face - 1, BJAction.Hit.value])\n",
-    "\n"
+    "print(bj_Q[my_sum - 12, dealer_face - 1, BJAction.Hit.value])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have 12, and i choose to Hit\n",
+      "Broke loop with sum 22\n",
+      "Me 22, D 20\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(22, 20)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def do_run(verbose = True):\n",
+    "    dealer_face = draw_card()\n",
+    "    my_sum = 0\n",
+    "    while my_sum < 12:\n",
+    "        my_sum += draw_card()\n",
+    "\n",
+    "    while True:\n",
+    "        action = max(BJAction, key=lambda a: bj_Q[my_sum - 12, dealer_face - 1, a.value])\n",
+    "        if verbose:\n",
+    "            print(f\"I have {my_sum}, and i choose to {action.name}\")\n",
+    "        if action == BJAction.Stand:\n",
+    "            break\n",
+    "\n",
+    "        my_sum += draw_card()\n",
+    "        if my_sum > 21:\n",
+    "            break\n",
+    "\n",
+    "    if verbose:\n",
+    "        print(f\"Broke loop with sum {my_sum}\")\n",
+    "\n",
+    "    dealer_sum = dealer_face\n",
+    "    while dealer_sum < 17:\n",
+    "        dealer_sum += draw_card()\n",
+    "\n",
+    "    if verbose:\n",
+    "        print(f\"Me {my_sum}, D {dealer_sum}\")\n",
+    "    return my_sum, dealer_sum\n",
+    "\n",
+    "do_run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Played 10000 games, won 4183, drew 719, lost 5098\n"
+     ]
+    }
+   ],
+   "source": [
+    "draws = 0\n",
+    "wins = 0\n",
+    "losses = 0\n",
+    "\n",
+    "ngames = 10_000\n",
+    "for _ in range(ngames):\n",
+    "    my_sum, dealer_sum = do_run(False)\n",
+    "    if my_sum > 21:\n",
+    "        losses += 1\n",
+    "    elif dealer_sum > 21:\n",
+    "        wins += 1\n",
+    "    elif my_sum == dealer_sum:\n",
+    "        draws += 1\n",
+    "    elif my_sum > dealer_sum:\n",
+    "        wins += 1\n",
+    "    else:\n",
+    "        losses += 1\n",
+    "\n",
+    "print(f\"Played {ngames} games, won {wins}, drew {draws}, lost {losses}\")"
+   ]
   }
  ],
  "metadata": {
