add flag for choosing algo

--- a/proj.ipynb
+++ b/proj.ipynb
@@ -165,13 +165,14 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 235,
+            "execution_count": 252,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
+                        "Set parameter Method to value 0\n",
                         "Gurobi Optimizer version 10.0.3 build v10.0.3rc0 (win64)\n",
                         "\n",
                         "CPU model: 11th Gen Intel(R) Core(TM) i7-1165G7 @ 2.80GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
@@ -189,17 +190,16 @@
                         "Presolved: 48 rows, 33 columns, 160 nonzeros\n",
                         "\n",
                         "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-                        "       0   -1.9376097e+01   1.735490e+01   0.000000e+00      0s\n",
-                        "      21    6.0746890e-02   0.000000e+00   0.000000e+00      0s\n",
+                        "       0   -2.0836675e+01   1.886277e+01   1.791869e+07      0s\n",
+                        "      25    6.0746890e-02   0.000000e+00   0.000000e+00      0s\n",
                         "\n",
-                        "Solved in 21 iterations and 0.01 seconds (0.00 work units)\n",
+                        "Solved in 25 iterations and 0.01 seconds (0.00 work units)\n",
                         "Optimal objective  6.074689036e-02\n"
                     ]
                 }
             ],
             "source": [
                 "taxi_m = gp.Model(\"taxi_driver\")\n",
-                "# m.params.LogToConsole = 0\n",
                 "\n",
                 "taxi_V = np.empty((TAXI_MAP_SIZE * TAXI_MAP_SIZE * 2), dtype=object)\n",
                 "taxi_Q = np.empty((TAXI_MAP_SIZE * TAXI_MAP_SIZE * 2, len(TaxiAction)), dtype=object)\n",
@@ -241,7 +241,10 @@
                 "    sense=GRB.MINIMIZE,\n",
                 ")\n",
                 "\n",
-                "taxi_m.optimize()"
+                "# taxi_m.params.LogToConsole = 0\n",
+                "taxi_m.params.Method = GRB.METHOD_PRIMAL\n",
+                "# taxi_m.params.Method = GRB.METHOD_DUAL\n",
+                "taxi_m.optimize()\n"
             ]
         },
         {
@@ -300,13 +303,14 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 185,
+            "execution_count": 247,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
+                        "State values\n",
                         "\n",
                         "No passenger:\n",
                         "-3.24   B   -3.29 -3.30 -3.31 \n",
