--- a/proj.ipynb
+++ b/proj.ipynb
@@ -7924,7 +7924,7 @@
             "source": [
                 "# Readable implementation with intermediate Q values\n",
                 "\n",
-                "bj_model = gp.Model(\"blackjack_bajillionaire\")\n",
+                "bj_model = gp.Model(\"blackjack_readable\")\n",
                 "bj_gamma = 0.9\n",
                 "\n",
                 "bj_V = np.empty((len(POSSIBLE_SUMS), len(POSSIBLE_DEALER_FACES)), dtype=object)\n",
