add table with optimal dual variables

--- a/proj.ipynb
+++ b/proj.ipynb
@@ -8300,7 +8300,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": 121,
             "metadata": {},
             "outputs": [
                 {
@@ -8357,7 +8357,6 @@
                 "\n",
                 "print()\n",
                 "print(\"Standing:\")\n",
-                "# Printing value space\n",
                 "print(BEGIN_UNDERLINE, end=\"\")\n",
                 "print(\"   | \", end=\"\")\n",
                 "for ms in POSSIBLE_SUMS:\n",
@@ -8371,6 +8370,50 @@
                 "        value = bj_p[action_idx].X\n",
                 "        color = GREEN_COLOR if value == 0.0 else RED_COLOR\n",
                 "        print(f\"{color}{value:7.4f}{END_COLOR}\", end=\" | \")\n",
+                "    print()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 123,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Optimal dual variables:\n",
+                        "\u001b[4m   |      12 |      13 |      14 |      15 |      16 |      17 |      18 |      19 |      20 |      21 | \u001b[0m\n",
+                        " 1 | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[91m 0.2287\u001b[0m | \u001b[91m 0.2287\u001b[0m | \u001b[91m 0.2287\u001b[0m | \u001b[91m 0.2287\u001b[0m | \u001b[91m 0.2287\u001b[0m | \u001b[91m 0.2287\u001b[0m | \u001b[91m 0.2287\u001b[0m | \u001b[91m 0.2287\u001b[0m | \n",
+                        " 2 | \u001b[92m 0.0000\u001b[0m | \u001b[91m 0.2138\u001b[0m | \u001b[91m 0.2138\u001b[0m | \u001b[91m 0.2138\u001b[0m | \u001b[91m 0.2138\u001b[0m | \u001b[91m 0.2138\u001b[0m | \u001b[91m 0.2138\u001b[0m | \u001b[91m 0.2138\u001b[0m | \u001b[91m 0.2138\u001b[0m | \u001b[91m 0.2138\u001b[0m | \n",
+                        " 3 | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \n",
+                        " 4 | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \n",
+                        " 5 | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \n",
+                        " 6 | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \u001b[91m 0.2000\u001b[0m | \n",
+                        " 7 | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[91m 0.2614\u001b[0m | \u001b[91m 0.2614\u001b[0m | \u001b[91m 0.2614\u001b[0m | \u001b[91m 0.2614\u001b[0m | \u001b[91m 0.2614\u001b[0m | \u001b[91m 0.2614\u001b[0m | \n",
+                        " 8 | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[91m 0.2795\u001b[0m | \u001b[91m 0.2795\u001b[0m | \u001b[91m 0.2795\u001b[0m | \u001b[91m 0.2795\u001b[0m | \u001b[91m 0.2795\u001b[0m | \n",
+                        " 9 | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[91m 0.2795\u001b[0m | \u001b[91m 0.2795\u001b[0m | \u001b[91m 0.2795\u001b[0m | \u001b[91m 0.2795\u001b[0m | \u001b[91m 0.2795\u001b[0m | \n",
+                        "10 | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[92m 0.0000\u001b[0m | \u001b[91m 0.2614\u001b[0m | \u001b[91m 0.2614\u001b[0m | \u001b[91m 0.2614\u001b[0m | \u001b[91m 0.2614\u001b[0m | \u001b[91m 0.2614\u001b[0m | \u001b[91m 0.2614\u001b[0m | \n"
+                    ]
+                }
+            ],
+            "source": [
+                "print(\"Optimal dual variables:\")\n",
+                "print(BEGIN_UNDERLINE, end=\"\")\n",
+                "print(\"   | \", end=\"\")\n",
+                "for ms in POSSIBLE_SUMS:\n",
+                "    print(f\"{ms:7}\", end=\" | \")\n",
+                "print(END_UNDERLINE, end=\"\")\n",
+                "print()\n",
+                "for df in POSSIBLE_DEALER_FACES:\n",
+                "    print(f\"{df:2}\", end=\" | \")\n",
+                "    for ms in POSSIBLE_SUMS:\n",
+                "        action_idx = get_bj_action_index(ms, df, BJAction.Stand)\n",
+                "        action_idx2 = get_bj_action_index(ms, df, BJAction.Hit)\n",
+                "        value = bj_p[action_idx].X\n",
+                "        value2 = bj_p[action_idx2].X\n",
+                "        color = GREEN_COLOR if value == 0.0 else RED_COLOR\n",
+                "        print(f\"{color}{value + value2:7.4f}{END_COLOR}\", end=\" | \")\n",
                 "    print()"
             ]
         },
